# PL0-Compiler

./: .gitignore  CMakeLists.txt  PL0.h  README.md  example2.txt  example3.txt  pl0.c  set.h
src/: pl0.c  pl0.h  set.c  set.h
test/: example.txt  example4.txt  example5.txt  example6.txt  example7.txt  example8.txt  example9.txt  examplea.txt  exampleb.txt  examplec.txt  exampled.txt
